security/app/ing-cosmoscats.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cosmoscats
  namespace: webinar
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - hosts:
      - cosmoscats.linux-jo.com
      secretName: cosmoscats-tls
  rules:
  - host: cosmoscats.linux-jo.com
    http:
      paths:
      - backend:
          serviceName: cosmoscats
          servicePort: 80
